tests/cases/smoke/invalid/expr_not_non_bool.ty
var x = 1
var bad = not x
